--- a/include/meson.build
+++ b/include/meson.build
@@ -9,6 +9,7 @@ cspice_headers = [
     'cspice/signal1.h',
     'cspice/SpiceCel.h',
     'cspice/SpiceCK.h',
+    'cspice/SpiceDAS.h',
     'cspice/SpiceDLA.h',
     'cspice/SpiceDSK.h',
     'cspice/SpiceDtl.h',
@@ -20,6 +21,7 @@ cspice_headers = [
     'cspice/SpiceOccult.h',
     'cspice/SpiceOsc.h',
     'cspice/SpicePln.h',
+    'cspice/SpiceSCLK.h',
     'cspice/SpiceSPK.h',
     'cspice/SpiceSrf.h',
     'cspice/SpiceUsr.h',
